--- a/src/main/resources/templates/createstory.mustache
+++ b/src/main/resources/templates/createstory.mustache
@@ -6,27 +6,32 @@
             <input type="submit" value="Sign Out"/>
         </form>
     </div>
-    <a href="/createstory">Add story</a>
+    {{#message}}
+        {{message}}
+    {{/message}}
     <div>
-        <form method="post">
-            <input type="text" name="text" placeholder="Введите сообщение">
-            <input type="text" name="tag" placeholder="Тэг">
+        <form action="/createstory" method="post">
+            <input type="text" name="title" placeholder="Введите название рассказа">
+            <input type="text" name="cover" placeholder="ссылка на обложку">
+            <textarea type="text" name="description" placeholder="Описание"></textarea>
+            <input type="text" name="genre" placeholder="Введите жанр текста">
             <input type="hidden" name="_csrf" value="{{_csrf.token}}">
             <button type="submit">Добавить</button>
         </form>
     </div>
     <div>Список сообщений</div>
-    <form method="post" action="filter">
+    <form method="post" action="filterstory">
         <input type="text" name="filter">
         <input type="hidden" name="_csrf" value="{{_csrf.token}}">
         <button type="submit">Найти</button>
     </form>
-    {{#messages}}
+    {{#story}}
     <div>
         <b>{{id}}</b>
-        <span>{{text}}</span>
-        <i>{{tag}}</i>
+        <span>{{title}}</span>
+        <span>{{genre}}</span>
+        <i>{{author}}</i>
     </div>
-    {{/messages}}
+    {{/story}}
 </body>
 </html>
